WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
97615
fast/loader/scroll-position-restored-on-back.html failing after didFirstLayout/didFirstVisuallyNonEmptyLayout change
https://bugs.webkit.org/show_bug.cgi?id=97615
Summary
fast/loader/scroll-position-restored-on-back.html failing after didFirstLayou...
Beth Dakin
Reported
2012-09-25 15:59:34 PDT
fast/loader/scroll-position-restored-on-back.html is failing after
http://trac.webkit.org/changeset/129545
Patch forthcoming.
Attachments
Patch
(3.90 KB, patch)
2012-09-25 16:05 PDT
,
Beth Dakin
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Beth Dakin
Comment 1
2012-09-25 16:05:07 PDT
Created
attachment 165695
[details]
Patch
Beth Dakin
Comment 2
2012-09-25 16:07:58 PDT
Thanks Sam! Committed
http://trac.webkit.org/changeset/129569
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug